--- a/index.html
+++ b/index.html
@@ -1,25 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no" />
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<title>Yorlieth Avila</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+    <link rel="stylesheet" href="./stylesheets/style.css">
+    <title>Yorlieth Avila</title>
 </head>
+
 <body>
-	<div class="container">
-		<div class="content-wrapper">
-			<!-- header -->
-			<header>
-				<nav>
-					<ul></ul>
-				</nav>
-			</header>
-		</div>
-	</div>
-	 <script src="float-panel.js"></script>
+    <div class="container">
+        <div class="content-wrapper">
+            <!-- header -->
+            <header>
+                <nav>
+                    <ul>
+                        <li>home</li>
+                        <li>work</li>
+                        <li>about</li>
+                    </ul>
+                </nav>
+                <div class="header">
+                	<section class="header-content">
+                		<span class="txt-rotate" data-period="2000" data-rotate='[ "Design", "Experiences", "Front end", "Back end", "Code" ]'></span>
+                	</section>
+                </div>
+            </header>
+        </div>
+    </div>
+    <script src="./float.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-	<script src="./main.js"></script>
+    <script src="./main.js"></script>
 </body>
+
 </html>
