--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="minimum-scale=1.0, width=device-width, maximum-scale=1.0, user-scalable=no" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Poiret+One|Shadows+Into+Light|Open+Sans:400,800" rel="stylesheet">
     <link rel="stylesheet" href="./stylesheets/style.css">
     <title>Yorlieth Avila</title>
 </head>
@@ -22,9 +22,9 @@
                     </ul>
                 </nav>
                 <div class="header">
-                	<section class="header-content">
-                		<span class="txt-rotate" data-period="2000" data-rotate='[ "Design", "Experiences", "Front end", "Back end", "Code" ]'></span>
-                	</section>
+                	<h1>Yorlieth Avila</h1>
+                		<span class="txt-rotate" data-period="2000" data-rotate='[ "Motion Arts", "Animation", "Design", "Creative" ]'></span>
+                		<a href="mailto:yorliethavila12@gmail.com" class="hire-button">Let's work together</a>
                 </div>
             </header>
         </div>
