--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                 		<a href="mailto:yorliethavila12@gmail.com" class="hire-button">Let's work together</a>
                 </div>
             </header>
+            <section class="skills">
+            	<section class="skills-description">
+            		<h1>Specializing In</h1>
+            		<p>Motion Media</p>
+            	</section>
+            	<div class="skill-content">
+            	<section class="skill">motionMedia</section>
+            	<section class="skill">Animation</section>
+            	</div>
+            </section>
         </div>
     </div>
     <script src="./float.js"></script>
