--- a/index.html
+++ b/index.html
@@ -22,20 +22,39 @@
                     </ul>
                 </nav>
                 <div class="header">
-                	<h1>Yorlieth Avila</h1>
-                		<span class="txt-rotate" data-period="2000" data-rotate='[ "Motion Arts", "Animation", "Design", "Creative" ]'></span>
-                		<a href="mailto:yorliethavila12@gmail.com" class="hire-button">Let's work together</a>
+                    <h1>Yorlieth Avila</h1>
+                    <span class="txt-rotate" data-period="2000" data-rotate='[ "Motion Arts", "Animation", "Design", "Creative" ]'></span>
+                    <a href="mailto:yorliethavila12@gmail.com" class="hire-button">Let's work together</a>
                 </div>
             </header>
             <section class="skills">
-            	<section class="skills-description">
-            		<h1>Specializing In</h1>
-            		<p>Motion Media</p>
-            	</section>
-            	<div class="skill-content">
-            	<section class="skill">motionMedia</section>
-            	<section class="skill">Animation</section>
-            	</div>
+                <section class="skills-description">
+                    <h1>Specializing In</h1>
+                    <p>Motion Media</p>
+                </section>
+                <div class="skill-content">
+                    <section class="skill">motionMedia</section>
+                    <section class="skill">Animation</section>
+                </div>
+            </section>
+            <section class="latest-work">
+                <section class="work-content">
+                    <h1>Latest Work</h1>
+                    <p>this is lastest</p>
+                    <a href="" class="work-button">See More</a>
+                </section>
+                <div class="slide-container">
+                    
+                    <div class="slider">
+                        <div class="thumbs">
+                            <div class="slide first"></div>
+                            <div class="slide second"></div>
+                            <div class="slide third"></div>
+                        </div>
+                    </div>
+                    <button class="prev">Prev</button>
+                    <button class="next">Next</button>
+                </div>
             </section>
         </div>
     </div>
