slider on touch

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <header>
                 <nav>
                     <ul>
-                        <a class="modal-open"href="#work">
+                        <a class="modal-open" href="#work">
                             <li>work</li>
                         </a>
                         <a href="#about">
@@ -48,7 +48,7 @@
                     <a href="#work" class="work-button modal-open">See More</a>
                 </section>
                 <div class="slide-container">
-                    <div class="slider">
+                    <div class=" ms-touch slider">
                         <div class="thumbs">
                             <div class="slide first"></div>
                             <div class="slide second"></div>
@@ -85,15 +85,30 @@
             </span>
             <span id="scroll-top">
                 &#10148;</span>
-            <section class="tittle">
-                <h1>one</h1>
-                <p>date</p>
-            </section>
-            <section class="about-work">
-                <h1>project 1</h1>
-                <p>about project</p>
-            </section>
-            <section class="work-img"></section>
+            <div class="work-content">
+                <section class="project">
+                    <section class="tittle">
+                        <h1>one</h1>
+                        <p>date</p>
+                    </section>
+                    <section class="about-work">
+                        <h1>project 1</h1>
+                        <p>about project</p>
+                    </section>
+                    <section class="work-img"></section>
+                </section>
+                <section class="project">
+                    <section class="tittle">
+                        <h1>one</h1>
+                        <p>date</p>
+                    </section>
+                    <section class="about-work">
+                        <h1>project 1</h1>
+                        <p>about project</p>
+                    </section>
+                    <section class="work-img"></section>
+                </section>
+            </div>
         </section>
     </div>
     <script src="./float.js"></script>
