--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="container">
+    <div id="container"class="container">
         <div class="content-wrapper">
             <!-- header -->
             <header>
@@ -60,7 +60,7 @@
                 </div>
             </section>
             <section id="about" class="about">
-                <div class="about-image"></div>
+                <div class="about-image slideanim"></div>
                 <div class="about-content">
                     <h1>Why Me</h1>
                     <p>i'm awesome</p>
@@ -91,21 +91,14 @@
                         <h1>one</h1>
                         <p>date</p>
                     </section>
-                    <section class="about-work">
-                        <h1>project 1</h1>
-                        <p>about project</p>
-                    </section>
-                    <section class="work-img"></section>
+                    <section class="work-img slideanim"></section>
                 </section>
                 <section class="project">
                     <section class="tittle">
                         <h1>one</h1>
                         <p>date</p>
                     </section>
-                    <section class="about-work">
-                        <h1>project 1</h1>
-                        <p>about project</p>
-                    </section>
+                    
                     <section class="work-img"></section>
                 </section>
             </div>
