--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         <h1>one</h1>
                         <p>date</p>
                     </section>
-                    <section class="work-img slideanim"></section>
+                    
+                    <section class="work-img"></section>
                 </section>
                 <section class="project">
                     <section class="tittle">
