--- a/index.html
+++ b/index.html
@@ -90,15 +90,15 @@
                 <section class="project">
                     <section class="tittle">
                         <h1>Color Theory</h1>
-                        <p>Utilized colors to create vivid contrast of nature</p>
+                        <p>Created a scenary with perspective and fine lines</p>
                     </section>
                     
                     <section class="work-img one"></section>
                 </section>
                 <section class="project">
                     <section class="tittle">
-                        <h1>Gen Z pollution</h1>
-                        <p>I came up with the concept of showcasing the phenomena of children growing up with a poluted society driven by technology.</p>
+                        <h1>Design</h1>
+                        <p>came up with a created concept of a creature which was executed with clay and acrilics.</p>
                     </section>
                     
                     <section class="work-img two"></section>
