--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="about-image slideanim"></div>
                 <div class="about-content">
                     <h1>Why Me</h1>
-                    <p>A strong conceptual thinker passionate about inspiring change through visuals. SCAD Freshment exploring art through digital and traditional media.</p>
+                    <p>Strong conceptual thinker passionate about inspiring change through digital and traditional media.Currently SCAD freshmen majoring in Motion Media</p>
                     <section class="icons">
                         <a id="mail" href="mailto:yorliethavila12@gmail.com"><i class="far fa-envelope"></i></a>
                         <a href="docs/resume_denia_avila.pdf"><i class="far fa-file"></i></a>
